options2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

error: expected one of `,`, `:`, or `}`, found `!`
  --> /home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check/src/main.rs:17:22
   |
16 |         word = optional_target {
   |                --------------- while parsing this struct
17 |             assert_eq!(word, target);
   |             ---------^ expected one of `,`, `:`, or `}`
   |             |
   |             while parsing this struct field

error: expected one of `,`, `:`, or `}`, found `)`
  --> /home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check/src/main.rs:17:36
   |
16 |         word = optional_target {
   |                --------------- while parsing this struct
17 |             assert_eq!(word, target);
   |                                    ^ expected one of `,`, `:`, or `}`

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `{`
  --> /home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check/src/main.rs:35:43
   |
35 |         integer = optional_integers.pop() {
   |                                           ^ expected one of `.`, `;`, `?`, `}`, or an operator


// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error: expected one of `,`, `:`, or `}`, found `!`
  --> src/main.rs:17:22
   |
16 |         word = optional_target {
   |                --------------- while parsing this struct
17 |             assert_eq!(word, target);
   |             ---------^ expected one of `,`, `:`, or `}`
   |             |
   |             while parsing this struct field

error: expected one of `,`, `:`, or `}`, found `)`
  --> src/main.rs:17:36
   |
16 |         word = optional_target {
   |                --------------- while parsing this struct
17 |             assert_eq!(word, target);
   |                                    ^ expected one of `,`, `:`, or `}`

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `{`
  --> src/main.rs:35:43
   |
35 |         integer = optional_integers.pop() {
   |                                           ^ expected one of `.`, `;`, `?`, `}`, or an operator

error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:42:2
   |
42 | }
   |  ^ consider adding a `main` function to `src/main.rs`

For more information about this error, try `rustc --explain E0601`.
error: could not compile `format_check` (bin "format_check") due to 4 previous errors

[!] Source code format check: FAILED
